# dados_abertos_cnpj

./: .env  Cargo.toml  README.md  Rocket.toml
data_models/: Cargo.toml
data_models/migrations/2021-09-24-200111_create_empresas/: down.sql  up.sql
data_models/migrations/2021-09-29-115227_create_naturezas_juridicas/: down.sql  up.sql
data_models/migrations/2021-09-29-115845_create_qualificacoes_de_socios/: down.sql  up.sql
data_models/migrations/2021-09-29-120028_create_cnaes/: down.sql
data_models/migrations/2021-09-29-120326_create_municipios/: down.sql
data_models/migrations/2021-09-29-120331_create_paises/: down.sql  up.sql
data_models/migrations/2021-09-29-122826_create_estabelecimentos/: up.sql
data_models/migrations/2021-10-01-181731_create_motivos_de_situacoes_cadastrais/: down.sql
data_models/migrations/2021-10-05-183627_alter_table_estab_cnae_fisc_sec_type_str/: down.sql
data_models/migrations/2021-10-08-122800_create_situacoes_cadastrais/: up.sql
data_models/migrations/2021-10-10-182335_alter_tables_int_types/: down.sql  up.sql
data_models/migrations/2021-10-22-113740_create_arquivos_importados/: down.sql  up.sql
data_models/migrations/2021-10-25-204307_alter_arquivos_importados_milliseconds/: down.sql  up.sql
data_models/migrations/2021-10-27-173126_create_socios/: down.sql  up.sql
data_models/migrations/2021-10-27-193445_create_simples/: down.sql  up.sql
data_models/migrations/2021-10-27-202813_create_faixas_etarias/: down.sql  up.sql
data_models/migrations/2021-10-29-205714_create_index_socios/: down.sql  up.sql
data_models/migrations/2021-11-05-123747_create_metadados_das_tabelas/: down.sql  up.sql
data_models/src/: database.rs  lib.rs  models.rs  schema.rs
graphql-server/: Cargo.toml
graphql-server/src/: graphql_schema.rs  main.rs
importer/: Cargo.toml
importer/src/: cli.rs  config.rs  database.rs  import.rs  lib.rs  main.rs  tipo_de_arquivo.rs
migrations/2021-09-29-120028_create_cnaes/: up.sql
migrations/2021-09-29-120326_create_municipios/: up.sql
migrations/2021-09-29-122826_create_estabelecimentos/: down.sql
migrations/2021-10-01-181731_create_motivos_de_situacoes_cadastrais/: up.sql
migrations/2021-10-05-173637_alter_table_estab_situacao_cad_type_str/: down.sql  up.sql
migrations/2021-10-05-183627_alter_table_estab_cnae_fisc_sec_type_str/: up.sql
migrations/2021-10-05-202023_create_foreign_keys/: down.sql  up.sql
migrations/2021-10-08-122800_create_situacoes_cadastrais/: down.sql
rest-server/: Cargo.toml
rest-server/src/: lib.rs  main.rs
src/: config.rs  database.rs  import.rs  lib.rs  main.rs  models.rs  schema.rs  types.rs
