[package]
name = "data_models"
version = "0.1.2"
edition = "2018"
authors = ["Gilberto Cezar de Almeida <gibalmeida@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
diesel = { version = "1.4.8", features = ["mysql","numeric","chrono"] }
dotenv = "0.15.0"
bigdecimal = { version = "0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
