[package]
name = "graphql-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.4", features = ["mysql","numeric","chrono"] }
dotenv = "0.15"
juniper = "0.15"
juniper_rocket = "0.8.0"
data_models = { path = "../data_models" }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bigdecimal = { version = "0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }