[package]
name = "importer"
version = "0.2.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1"
encoding = "0.2"
diesel = { version = "1.4.8", features = ["mysql","numeric","chrono"] }
dotenv = "0.15.0"
bigdecimal = { version = "0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
data_models = { path="../data_models"}
zip = "0.5.13"
structopt = "0.3.25"